--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -1,21 +1,17 @@
 <!doctype html>
-<html lang="fr">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="/assets/images/favicon.png">
+<html>
+	<head>
+		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+		<link
+		rel="stylesheet" href="assets/css/main.css"/>
+		{# <link rel="stylesheet" href="/assets/css/style.css"> #}
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css"/></noscript>
+		<link rel="icon" href="/assets/images/favicon.png">
+	</head>
+	<title>Plan</title>
 
-    <title>{% block title %}{% endblock %}</title>
-
-    <link rel="stylesheet" href="/assets/css/style.css">
-    {% block stylesheet %}{% endblock %}
-</head>
-
-<body>
-    {% block content %}{% endblock %}
-    {% block javascript %}{% endblock %}
-</body>
+	{# <title>{% block title %}{% endblock %}</title> #}
+	{% block content %}{% endblock %}
+	{% block javascript %}{% endblock %}
 </html>
-
-
