--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -11,7 +11,33 @@
 	</head>
 	<title>Plan</title>
 
-	{# <title>{% block title %}{% endblock %}</title> #}
+<body class="is-preload">
+		<div id="wrapper">
+			<div id="bg"></div>
+			<div id="overlay"></div>
+			<div
+				id="main">
+				<!-- Header -->
+				<header id="header">
+
 	{% block content %}{% endblock %}
-	{% block javascript %}{% endblock %}
+	</header>
+	<!-- Footer -->
+	<footer id="footer">
+		<span class="copyright">&copy; Plan 2023</span>
+	</footer>
+</div>
+</div>
+{% block javascript %}
+<script>
+window.onload = function () {
+document.body.classList.remove('is-preload');
+}
+window.ontouchmove = function () {
+return false;
+}
+window.onorientationchange = function () {
+document.body.scrollTop = 0;
+}</script>{% endblock %}
+</body>
 </html>
