--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -5,18 +5,10 @@
 				<p>Find a complete CRUD example on #}
 	{# <a href="/items">/items</a>
 				page.</p> #}
-		{# <body class="is-preload"> 
-		<div id="wrapper">
-			<div id="bg"></div>
-			<div id="overlay"></div>
-			<div
-				id="main">
-				<!-- Header -->
-				<header id="header"> #}
 					<h1>plan</h1>
 					<h2>
 						Unexpected Holidays</h2>
-					<p>You don't know where to go in vacation? ?</p>
+					<p>You don't know where to go in vacation?</p>
 					<p>
 						Choose a destination type below and let chance decides for you!
 					</p>
