--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -4,9 +4,9 @@
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
 		<link
-		rel="stylesheet" href="assets/css/main.css"/>
+		rel="stylesheet" href="/assets/css/main.css"/>
 		{# <link rel="stylesheet" href="/assets/css/style.css"> #}
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css"/></noscript>
+		<noscript><link rel="stylesheet" href="/assets/css/noscript.css"/></noscript>
 		<link rel="icon" href="/assets/images/favicon.png">
 	</head>
 	<title>Plan</title>
