--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -12,17 +12,14 @@
 					<p>
 						Choose a destination type below and let chance decides for you!
 					</p>
-					<form id='form'>
+					<form action="/trip" method="POST" id='form'>
 						<div>
 							<label for="destinations-type"></label>
 							<select id="destinations-type" name="destinations-type">
 								<option value="">---destinations type---</option>
-								<option value="">City</option>
-								<option value="">Countryside</option>
-								<option value="">Desert</option>
-								<option value="">Montain</option>
-								<option value="">Ocean</option>
-								<option value="">Jungle</option>
+								{% for type in types %}
+									<option value="{{ type.value }}">{{ type.name }}</option>
+								{% endfor %}
 							</select>
 						</div>
 						<div>
