--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -24,7 +24,7 @@
 	</header>
 	<!-- Footer -->
 	<footer id="footer">
-		<span class="copyright">&copy; Plan 2023</span>
+		<span class="copyright">&copy; plan 2023</span>
 	</footer>
 </div>
 </div>
