--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -6,24 +6,24 @@
 	{# <a href="/items">/items</a>
 				page.</p> #}
 					<h1>plan</h1>
-					<h2>
+					<h1 class="sous-titre">
 						Unexpected Holidays</h2>
 					<p>You don't know where to go in vacation?</p>
 					<p>
-						Choose a destination type below and let chance decides for you!
+						Choose a type of location below and let chance decides for you!
 					</p>
 					<form action="/trip" method="POST" id='form'>
 						<div>
 							<label for="destinations-type"></label>
 							<select id="destinations-type" name="destinations-type">
-								<option value="">---destinations type---</option>
+								<option value="">--- location type ---</option>
 								{% for type in types %}
 									<option value="{{ type.value }}">{{ type.name }}</option>
 								{% endfor %}
 							</select>
 						</div>
 						<div>
-							<button class="myButton" type="submit">Envoyer</button>
+							<button class="myButton" type="submit">Submit</button>
 						</div>
 					</form>
 				
